<resources>
    <string name="app_name">ToDo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="new_task_title">New task</string>
    <string name="new_task_input_hint">New task content</string>
    <string name="new_task_save_button">Save</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_task_title">Are you sure?</string>
    <string name="delete_task_message">Task will be deleted forever. You can\'t bring it back</string>
    <string name="edit">Edit</string>
    <string name="edit_task_input_hint">Edit task content</string>
    <string name="new_task_is_high_priority">High priority</string>
    <string name="detail_task_title">Task detail</string>
    <string name="finished">Finalizada</string>
    <string name="add_subtask">Add subtask</string>
    <string name="subtask_deleted">Subtask was deleted</string>
    <string name="undo">Undo</string>
    <string name="accept">Accept</string>
    <string name="task_empty">Task empty</string>
    <string name="content_in_task">To save the task you must describe the content</string>
    <string name="subtask_empty">Subtask empty</string>
    <string name="content_in_subtask">To save the subtask you must describe the content</string>
    <string name="cancel">Cancelar</string>
    <string name="list_task_empty">No lists! Press + to add</string>
    <string name="total">Total</string>
    <string name="done">Done</string>
    <string name="to_do">To do</string>
    <string name="priority">Priority</string>
</resources>
