<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.3"
        android:gravity="center">

        <TextView
            android:id="@+id/totalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total" />

        <TextView
            android:id="@+id/totalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorAccent"
            android:textSize="18sp"
            tools:text="XX" />
    </LinearLayout>

    <View
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:background="?colorAccent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.3"
        android:gravity="center">

        <TextView
            android:id="@+id/doneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done" />

        <TextView
            android:id="@+id/doneValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorAccent"
            android:textSize="18sp"
            tools:text="XX"/>
    </LinearLayout>

    <View
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:background="?colorAccent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.3"
        android:gravity="center">

        <TextView
            android:id="@+id/todoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_do" />

        <TextView
            android:id="@+id/todoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorAccent"
            android:textSize="18sp"
            tools:text="XX" />
    </LinearLayout>
</LinearLayout>