<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/priorityLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/priorityText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/priorityValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="XX" />
    </LinearLayout>

    <View
        android:id="@+id/priorityLinearView"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="?colorAccent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/totalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/totalValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="XX" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="?colorAccent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/doneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/doneValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="XX" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="?colorAccent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/todoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_do"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/todoValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="?colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="XX" />
    </LinearLayout>

</LinearLayout>